--- a/index.html
+++ b/index.html
@@ -31,26 +31,26 @@
             <img src="path-to-your-image.jpg" alt="Your Name" class="profile-pic">
             <h2>Hsiang-Yang (Gary) Shyu</h2>
             <p>
-                <i class="fa fa-location fa-lg" aria-hidden="true"></i>
+                <i class="fas fa-map-marker-alt fa-lg" style="color: #000000" aria-hidden="true"></i>
                 <a> Tampa, Florida</a>
             <p>
-
-            <p>
-                <i class="fa fa-envelope fa-lg" aria-hidden="true"></i>
+                <i class="fa fa-envelope fa-lg" style="color: #BB001B" aria-hidden="true"></i>
                 <a href="gary20040529@gmail.com" style="color: #000000"> gary20040529@gmail.com</a>
             <p>
-                <i class="fa fa-envelope fa-lg" aria-hidden="true"></i>
+                <i class="fa fa-envelope fa-lg" style="color: #4285F4" aria-hidden="true"></i>
                 <a href="mailto:hsiangyang@usf.edu" style="color: #000000"> hsiangyang@usf.edu</a>
             <p>
                 <i class="fab fa-linkedin fa-lg" style="color: #0077B5" aria-hidden="true"></i>
                 <a href="https://www.linkedin.com/in/hsiangyang-888641158" style="color: #000000">Linkedin</a>
             <p>
-                <i class="ai ai-google-scholar-square fa-lg" style="color: #0077B5" aria-hidden="true"></i>
+                <i class="ai ai-google-scholar-square fa-lg" style="color: #4285F4" aria-hidden="true"></i>
                 <a href="https://scholar.google.com/citations?user=e8Inw1wAAAAJ&hl=en" style="color: #000000">Google Scholar</a>
             <p>
-                <a href="https://github.com/gary830529" class="fab fa-github fa-lg" target="_blank"></a> | 
-                <a href="https://twitter.com/GaryShyu0529" class="fab fa-twitter fa-lg" target="_blank"></a>
-            </p>
+                <i class="fab fa-github fa-lg" style="color: #6cc644" aria-hidden="true"></i>
+                <a href="https://github.com/gary830529" style="color: #000000">GitHub</a>
+            <p>
+                <i class="fab fa-twitter fa-lg" style="color: #00acee" aria-hidden="true"></i>
+                <a href="https://twitter.com/GaryShyu0529" style="color: #000000">Twitter</a>
             <!-- Add more personal information if needed -->
         </div>
     
