--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <main>
         <div class="left-side">
-            <img src="path-to-your-image.jpg" alt="Your Name" class="profile-pic">
+            <img src="https://raw.githubusercontent.com/gary830529/Homepage/main/headshot2.jpg" alt="Shyu" class="profile-pic">
             <h2>Hsiang-Yang (Gary) Shyu</h2>
             <p>
                 <i class="fas fa-map-marker-alt fa-lg" style="color: #000000" aria-hidden="true"></i>
