--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons/css/academicons.min.css">
 </head>
-
+<div class="main-content">
 <body>
 
     <header>
@@ -84,5 +84,5 @@
     </footer>
 
 </body>
-
+</div>
 </html>
