--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1>Hsiang-Yang (Gary) Shyu</h1>
             <nav>
                 <ul>
-                    <li><a href="https://gary830529.github.io/Homepage/#home">Home</a></li>
+                    <li><a href="https://gary830529.github.io/Homepage/">Home</a></li>
                     <li><a href="#news">News</a></li>
                     <li><a href="#research">Research</a></li>
                     <li><a href="#publications">Publications & Presentations</a></li>
