--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="main-content">
 
-        <header>
+        <header style="background-image: url('https://raw.githubusercontent.com/gary830529/Homepage/main/background.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center;">
             <h1>Hsiang-Yang (Gary) Shyu</h1>
             <nav>
                 <ul>
@@ -67,22 +67,25 @@
                 <div class="right-side">
                     <h2>About me</h2>               
                     <p>
-                        Hello there! I'm Hsiang-Yang (Gary) Shyu, and I'm thrilled to welcome you to my personal webpage. Currently, I'm on an exciting journey as a Ph.D. candidate at the University of South Florida, where I'm immersing myself in cutting-edge research within the <a href="https://www.membiolab.com/" style="color: #115740"> Membrane Biotechnology Lab</a>, a part of the Department of Civil and Environmental Engineering.
+                        Welcome to my webpage. My name is Hsiang-Yang (Gary) Shyu, and I have the privilege of working as a Ph.D candidate under the mentorship of Dr. Daniel Yeh in his <a href="https://www.membiolab.com/" style="color: #6cc644"> Membrane Biotechnology Lab</a> in the Department of Civil and Environmental Engineering at the University of South Florida.
                     </p>
 
                     <p>
-                        My research is deeply rooted in the fascinating world of membrane-based separation technology, advanced adsorbents, and meticulous data analysis. I'm wholeheartedly dedicated to contributing to the development of the <a href="https://www.youtube.com/watch?v=v5pW_Mqt6dU" style="color: #115740"> NEWgenerator™</a>, an innovative off-grid, autonomous decentralized wastewater treatment system. 
-                        My days are filled with analyzing data from a field test system located in the vibrant landscapes of South Africa. The goal? To create dynamic models and zero in on optimizing the water, nutrient, and energy cycles within our system, ensuring efficiency and sustainability.
-                    </p>
-
-                    <p>Rewinding a bit, my journey before the Ph.D. was just as exciting. I earned my M.S. in Environmental Engineering right here at USF. 
-                        During that time, I dove into research on a flotation microalgae bioreactor, exploring its potential applications in aquaponic systems and wastewater treatment plants.
+                        Our research team is at the cutting edge of engineering wastewater treatment technologies specifically designed for non-sewered sanitation. The <a href="https://www.youtube.com/watch?v=v5pW_Mqt6dU" style="color: #6cc644"> NEWgenerator™</a> stands as our most notable contribution, a revolutionary off-grid treatment system that not only treats wastewater but also repurposes it, transforming waste into valuable resources like nutrients, energy, and water.
                     </p>
 
                     <p>
-                        Curious to know more about my professional journey? Feel free to take a look at my most recent <a href="https://gary830529.github.io/Resume/">CV</a> (Last update on September 10th, 2023). Thanks for stopping by, and I can't wait to share my world of research and innovation with you!"
+                        In my crucial role in this transformative project, I am responsible for advancing membrane-based separation technologies and innovating advanced adsorbents for nutrient recycling. My work includes the meticulous analysis of data collected from a field test system in South Africa, with the goal of developing dynamic models to optimize water, nutrient, and energy cycles within the system. Further enriching this work, I have embraced the field of machine learning (ML), applying it to enhance our wastewater treatment capabilities. I have contributed to the development of a real-time remote monitoring system for our system, utilizing ML algorithms to create soft sensors that predict key water quality parameters. This innovation provides invaluable real-time insights, significantly boosting the operational efficiency of the treatment system.
                     </p>
 
+                    <p>
+                        Before delving into my Ph.D studies, I completed my Master’s degree in Environmental Engineering right here at the University of South Florida. During that period, my research centered on applying a flotation microalgae bioreactor within aquaponic systems and wastewater treatment plants.
+
+                    </p>
+                    
+                    <p>
+                        For an in-depth view of my academic and professional journey, I invite you to peruse my latest  <a href="https://gary830529.github.io/Resume/" style="color: #00acee">CV</a> (Update on September 10th, 2023).
+                    </p>
                 </div>
             </main>
             </div>
