--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="#news">News</a></li>
                     <li><a href="#research">Research</a></li>
                     <li><a href="#publications">Publications & Presentations</a></li>
-                    <li><a href="#biography">Biography</a></li>
+                    <li><a href="https://gary830529.github.io/Biography/">Biography</a></li>
                 </ul>
             </nav>
         </header>
