--- a/index.html
+++ b/index.html
@@ -30,17 +30,20 @@
             <div class="left-side">
                 <img src="https://raw.githubusercontent.com/gary830529/Homepage/main/headshot2.jpg" alt="Shyu" class="profile-pic">
                 <h2>Hsiang-Yang (Gary) Shyu</h2>
+                                
+                <p> Ph.D. Candidate @ USF CEE</p>
+
                 <address>
                     <ul class="contact-info">
                         <li>
                             <i class="fas fa-map-marker-alt"></i> Tampa, Florida
                         </li>
                         <li>
-                            <i class="fa fa-envelope" style="color: #BB001B"></i>
+                            <i class="fa fa-envelope" style="color: #b75362"></i>
                             <a href="mailto:gary20040529@gmail.com"  style="color: #000000">gary20040529@gmail.com</a>
                         </li>
                         <li>
-                            <i class="fa fa-envelope" style="color: #4285F4"></i>
+                            <i class="fa fa-envelope" style="color: #6a6a6a"></i>
                             <a href="mailto:hsiangyang@usf.edu" style="color: #000000">hsiangyang@usf.edu</a>
                         </li>
                         <li>
@@ -67,7 +70,7 @@
                 <div class="right-side">
                     <h2>About me</h2>               
                     <p>
-                        Welcome to my webpage. My name is Hsiang-Yang (Gary) Shyu, and I have the privilege of working as a Ph.D candidate under the mentorship of Dr. Daniel Yeh in his <a href="https://www.membiolab.com/" style="color: #6cc644"> Membrane Biotechnology Lab</a> in the Department of Civil and Environmental Engineering at the University of South Florida.
+                        Welcome to my webpage. My name is Hsiang-Yang (Gary) Shyu, and I have the privilege of working as a Ph.D. candidate under the mentorship of Dr. Daniel Yeh in his <a href="https://www.membiolab.com/" style="color: #6cc644"> Membrane Biotechnology Lab</a> in the Department of Civil and Environmental Engineering at the University of South Florida.
                     </p>
 
                     <p>
