--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </p>
 
                     <p>
-                        Before delving into my Ph.D studies, I completed my Master’s degree in Environmental Engineering right here at the University of South Florida. During that period, my research centered on applying a flotation microalgae bioreactor within aquaponic systems and wastewater treatment plants.
+                        Before delving into my Ph.D. studies, I completed my Master’s degree in Environmental Engineering right here at the University of South Florida. During that period, my research centered on applying a flotation microalgae bioreactor within aquaponic systems and wastewater treatment plants.
 
                     </p>
                     
