--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <nav>
                 <ul>
                     <li><a href="https://gary830529.github.io/Homepage/">Home</a></li>
-                    <li><a href="#news">News</a></li>
-                    <li><a href="#research">Research</a></li>
-                    <li><a href="#publications">Publications & Presentations</a></li>
+                    <li><a href="https://gary830529.github.io/News">News</a></li>
+                    <li><a href="https://gary830529.github.io/Research">Research</a></li>
+                    <li><a href="https://gary830529.github.io/Publications">Publications & Presentations</a></li>
                     <li><a href="https://gary830529.github.io/Biography/">Biography</a></li>
                 </ul>
             </nav>
