--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </p>
 
                     <p>
-                        Our research team is at the cutting edge of engineering wastewater treatment technologies specifically designed for non-sewered sanitation. The <a href="https://www.youtube.com/watch?v=v5pW_Mqt6dU" style="color: #6cc644"> NEWgenerator™</a> stands as our most notable contribution, a revolutionary off-grid treatment system that not only treats wastewater but also repurposes it, transforming waste into valuable resources like nutrients, energy, and water.
+                        Our research team is at the cutting edge of engineering wastewater treatment technologies specifically designed for non-sewered sanitation. The <a href="https://www.youtube.com/watch?v=v5pW_Mqt6dU" style="color: #6cc644"> NEWgenerator™</a> project stands as our most notable contribution, a revolutionary off-grid treatment system that not only treats wastewater but also repurposes it, transforming waste into valuable resources like nutrients, energy, and water.
                     </p>
 
                     <p>
