--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
             <div class="right-side">
                 <div class="right-side">
+                    <div class="aboutme-section">
                     <h2>About me</h2>               
                     <p>
                         Welcome to my webpage. My name is Hsiang-Yang (Gary) Shyu, and I have the privilege of working as a Ph.D. candidate under the mentorship of Dr. Daniel Yeh in his <a href="https://www.membiolab.com/" style="color: #6cc644"> Membrane Biotechnology Lab</a> in the Department of Civil and Environmental Engineering at the University of South Florida.
@@ -89,10 +90,9 @@
                     <p>
                         For an in-depth view of my academic and professional journey, I invite you to peruse my latest  <a href="https://gary830529.github.io/Resume/" style="color: #00acee">CV</a> (Update on September 10th, 2023).
                     </p>
+                    </div>
                 </div>
             </main>
-            </div>
-        </main>
 
         <footer>
             <p>&copy; 2023 Hsiang-Yang (Gary) Shyu.</p>
