--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </main>
 
         <footer>
-            <p>&copy; 2023 Hsiang-Yang (Gary) Shyu.</p>
+            <p>&copy; 2023 <a href="https://gary830529.github.io/Homepage/" style="color: #ffffff">Hsiang-Yang (Gary) Shyu</a>.</p>
         </footer>
 
     </div>
