--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
 <body>
     <div class="main-content">
-
         <header style="background-image: url('https://raw.githubusercontent.com/gary830529/Homepage/main/background.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center;">
             <h1>Hsiang-Yang (Gary) Shyu</h1>
             <nav>
@@ -92,7 +91,8 @@
                     </p>
                     </div>
                 </div>
-            </main>
+            </div>
+        </main>
 
         <footer>
             <p>&copy; 2023 <a href="https://gary830529.github.io/Homepage/" style="color: #ffffff">Hsiang-Yang (Gary) Shyu</a>.</p>
