--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <img src="https://raw.githubusercontent.com/gary830529/Homepage/main/headshot2.jpg" alt="Shyu" class="profile-pic">
                 <h2>Hsiang-Yang (Gary) Shyu</h2>
                                 
-                <p> Ph.D. Candidate @ USF CEE</p>
+                <p><b> Ph.D. Candidate @ USF CEE </b></p>
 
                 <address>
                     <ul class="contact-info">
@@ -70,11 +70,11 @@
                     <div class="aboutme-section">
                     <h2>About me</h2>               
                     <p>
-                        Welcome to my webpage. My name is Hsiang-Yang (Gary) Shyu, and I have the privilege of working as a Ph.D. candidate under the mentorship of Dr. Daniel Yeh in his <a href="https://www.membiolab.com/" style="color: #6cc644"> Membrane Biotechnology Lab</a> in the Department of Civil and Environmental Engineering at the University of South Florida.
+                        Welcome to my webpage. My name is Hsiang-Yang (Gary) Shyu, and I have the privilege of working as a Ph.D. candidate under the mentorship of Dr. Daniel Yeh in his <b><a href="https://www.membiolab.com/" style="color: #1e6400"> Membrane Biotechnology Lab</a></b> in the Department of Civil and Environmental Engineering at the University of South Florida.
                     </p>
 
                     <p>
-                        Our research team is at the cutting edge of engineering wastewater treatment technologies specifically designed for non-sewered sanitation. The <a href="https://www.youtube.com/watch?v=v5pW_Mqt6dU" style="color: #6cc644"> NEWgenerator™</a> project stands as our most notable contribution, a revolutionary off-grid treatment system that not only treats wastewater but also repurposes it, transforming waste into valuable resources like nutrients, energy, and water.
+                        Our research team is at the cutting edge of engineering wastewater treatment technologies specifically designed for non-sewered sanitation. The <b><a href="https://www.youtube.com/watch?v=v5pW_Mqt6dU" style="color: #1e6400"> NEWgenerator™</a></b> project stands as our most notable contribution, a revolutionary off-grid treatment system that not only treats wastewater but also repurposes it, transforming waste into valuable resources like nutrients, energy, and water.
                     </p>
 
                     <p>
