--- a/Publications/index.html
+++ b/Publications/index.html
@@ -12,22 +12,22 @@
 
 <body>
     <div class="main-content">
-        <header style="background-image: url('https://raw.githubusercontent.com/gary830529/Homepage/main/background.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center;">
+        <header style="background-image: url('https://raw.githubusercontent.com/gary830529/Homepage/main/Figures/background.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center;">
             <h1>Hsiang-Yang (Gary) Shyu</h1>
             <nav>
                 <ul>
                     <li><a href="https://gary830529.github.io/Homepage/">Home</a></li>
-                    <li><a href="https://gary830529.github.io/News">News</a></li>
-                    <li><a href="https://gary830529.github.io/Research">Research</a></li>
-                    <li><a href="https://gary830529.github.io/Publications">Publications & Presentations</a></li>
-                    <li><a href="https://gary830529.github.io/Biography/">Biography</a></li>
+                    <li><a href="https://gary830529.github.io/Homepage/News/">News</a></li>
+                    <li><a href="https://gary830529.github.io/Homepage/Research/">Research</a></li>
+                    <li><a href="https://gary830529.github.io/Homepage/Publications/">Publications & Presentations</a></li>
+                    <li><a href="https://gary830529.github.io/Homepage/Biography/">Biography</a></li>
                 </ul>
             </nav>
         </header>
 
         <main>
             <div class="left-side">
-                <img src="https://raw.githubusercontent.com/gary830529/Homepage/main/headshot2.jpg" alt="Shyu" class="profile-pic">
+                <img src="https://raw.githubusercontent.com/gary830529/Homepage/main/Figures/headshot2.jpg" alt="Shyu" class="profile-pic">
                 <h2>Hsiang-Yang (Gary) Shyu</h2>
                 
                 <p> Ph.D. Candidate @ USF CEE</p>
