--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <h1>Hsiang-Yang (Gary) Shyu</h1>
             <nav>
                 <ul>
-                    <li><a href="https://gary830529.github.io/Homepage">Home</a></li>
-                    <li><a href="https://gary830529.github.io/Homepage/News">News</a></li>
-                    <li><a href="https://gary830529.github.io/Homepage/Research">Research</a></li>
-                    <li><a href="https://gary830529.github.io/Homepage/Publications">Publications & Presentations</a></li>
-                    <li><a href="https://gary830529.github.io/Homepage/Biography">Biography</a></li>
+                    <li><a href="https://gary830529.github.io/Homepage/">Home</a></li>
+                    <li><a href="https://gary830529.github.io/Homepage/News/">News</a></li>
+                    <li><a href="https://gary830529.github.io/Homepage/Research/">Research</a></li>
+                    <li><a href="https://gary830529.github.io/Homepage/Publications/">Publications & Presentations</a></li>
+                    <li><a href="https://gary830529.github.io/Homepage/Biography/">Biography</a></li>
                 </ul>
             </nav>
         </header>
@@ -87,7 +87,7 @@
                     </p>
                     
                     <p>
-                        For an in-depth view of my academic and professional journey, I invite you to peruse my latest  <a href="https://gary830529.github.io/Resume/" style="color: #00acee">CV</a> (Update on September 10th, 2023).
+                        For an in-depth view of my academic and professional journey, I invite you to peruse my latest  <a href="https://gary830529.github.io/Resume" style="color: #00acee">CV</a> (Update on September 10th, 2023).
                     </p>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2023 <a href="https://gary830529.github.io/Homepage/" style="color: #ffffff">Hsiang-Yang (Gary) Shyu</a>.</p>
+            <p>&copy; 2023 <a href="https://gary830529.github.io/Homepage" style="color: #ffffff">Hsiang-Yang (Gary) Shyu</a>.</p>
         </footer>
 
     </div>
