--- a/Research/index.html
+++ b/Research/index.html
@@ -12,22 +12,22 @@
 
 <body>
     <div class="main-content">
-        <header style="background-image: url('https://raw.githubusercontent.com/gary830529/Homepage/main/background.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center;">
+        <header style="background-image: url('https://raw.githubusercontent.com/gary830529/Homepage/main/Figures/background.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center;">
             <h1>Hsiang-Yang (Gary) Shyu</h1>
             <nav>
                 <ul>
                     <li><a href="https://gary830529.github.io/Homepage/">Home</a></li>
-                    <li><a href="https://gary830529.github.io/News">News</a></li>
-                    <li><a href="https://gary830529.github.io/Research">Research</a></li>
-                    <li><a href="https://gary830529.github.io/Publications">Publications & Presentations</a></li>
-                    <li><a href="https://gary830529.github.io/Biography/">Biography</a></li>
+                    <li><a href="https://gary830529.github.io/Homepage/News/">News</a></li>
+                    <li><a href="https://gary830529.github.io/Homepage/Research/">Research</a></li>
+                    <li><a href="https://gary830529.github.io/Homepage/Publications/">Publications & Presentations</a></li>
+                    <li><a href="https://gary830529.github.io/Homepage/Biography/">Biography</a></li>
                 </ul>
             </nav>
         </header>
 
         <main>
             <div class="left-side">
-                <img src="https://raw.githubusercontent.com/gary830529/Homepage/main/headshot2.jpg" alt="Shyu" class="profile-pic">
+                <img src="https://raw.githubusercontent.com/gary830529/Homepage/main/Figures/headshot2.jpg" alt="Shyu" class="profile-pic">
                 <h2>Hsiang-Yang (Gary) Shyu</h2>
                 
                 <p> Ph.D. Candidate @ USF CEE</p>
@@ -104,7 +104,7 @@
             <div class="right-side">
                 <div class="right-side">
                     <div class="research-section">
-                        <img src="https://raw.githubusercontent.com/gary830529/Homepage/main/NG_ToC.jpg" alt="NG">
+                        <img src="https://raw.githubusercontent.com/gary830529/Homepage/main/Figures/NG_ToC.jpg" alt="NG">
                         <div>
                             <h2>Onsite Wastewater Treatment & Sanitation</h2>
                             <p>The NEWgenerator™, an advanced non-sewered sanitation system, was deployed in an informal community in Durban, South Africa, in 2018. It includes an anaerobic membrane bioreactor (AnMBR), a nutrient capture system, and an electrochlorinator, collectively treating high-strength wastewater with high efficacy. Demonstrating significant contaminant removal, resilience to environmental and usage fluctuations, and a reduced need for sludge management, the system offers a scalable solution for safely managed sanitation and provides a means for non-potable water reuse to address the global water and sanitation crisis.</p>
@@ -112,7 +112,7 @@
                     </div>
                 
                     <div class="research-section">
-                        <img src="https://raw.githubusercontent.com/gary830529/Homepage/main/Z_Pic.jpg" alt="Zeolite">
+                        <img src="https://raw.githubusercontent.com/gary830529/Homepage/main/Figures/Z_Pic.jpg" alt="Zeolite">
                         <div>
                             <h2>Sustainable Nutrients Management</h2>
                             <p>The research examines nitrogen (predominantly ammonium) and phosphorus recovery from blackwater via natural and modified clinoptilolite zeolite in a NEWgenerator™ system. It highlights significant nutrient removal and zeolite regeneration efficiencies under fluctuating loads, emphasizing its dual utility in wastewater treatment—as a regenerable adsorbent and as a nutrient-rich fertilizer in a non-sewered sanitation system in the field.</p>
@@ -120,7 +120,7 @@
                     </div>
 
                     <div class="research-section">
-                        <img src="https://raw.githubusercontent.com/gary830529/Homepage/main/STELLA_Pic.jpg" alt="Modeling">
+                        <img src="https://raw.githubusercontent.com/gary830529/Homepage/main/Figures/STELLA_Pic.jpg" alt="Modeling">
                         <div>
                             <h2>System Dynamics Modeling </h2>
                             <p>Employing <a href="https://www.iseesystems.com/store/products/stella-architect.aspx" style="color: #00acee"> Stella<sup>®</sup> Architect</a> for system dynamics, this study develops an intricate model for the NEWgenerator™, optimizing the treatment of water, energy, and nutrients. The approach facilitates scenario-based evaluations, vital for refining the performance and maintenance of this pioneering non-sewer sanitation system across various settings.</p>
@@ -128,7 +128,7 @@
                     </div>
 
                     <div class="research-section">
-                        <img src="https://raw.githubusercontent.com/gary830529/Homepage/main/ML_ToC.jpg" alt="ML paper">
+                        <img src="https://raw.githubusercontent.com/gary830529/Homepage/main/Figures/ML_ToC.jpg" alt="ML paper">
                         <div>
                             <h2>Machine Learning for OWTS Monitoring</h2>
                             <p>Leveraging machine learning's predictive prowess, this study seeks to revolutionize OWTS (Onsite wastewater treatment system) monitoring by crafting soft sensor models that draw from real-time, in-line sensor data. These models promise to bypass the limitations of traditional lab analysis, delivering prompt and precise assessments of essential water quality metrics, thus optimizing treatment efficacy and adherence to environmental standards.</p>
