--- a/Biography/index.html
+++ b/Biography/index.html
@@ -69,7 +69,7 @@
                 <div class="right-side">
                     <h2>Biography</h2>               
                     <ul>
-                        <li>Ph.D. Environmental Engineering,  University of South Florida (Tampa, Florida) (<b>Est. 2024 Fall</b>)</li>
+                        <li>Ph.D. Environmental Engineering,  University of South Florida (Tampa, Florida) (<b>Est. 2024 Summer</b>)</li>
                         <li>M.S. Environmental Engineering,  University of South Florida (Tampa, Florida) (2018)</li>
                         <li>B.S. Environmental Engineering,  National Ilan University (Ilan city, Taiwan) (2016)</li>
                     </ul>
