--- a/Publications/index.html
+++ b/Publications/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shyu Publications</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/gary830529/Homepage@main/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons/css/academicons.min.css">
 </head>
@@ -172,5 +172,16 @@
         
     </div>
 </body>
+
+<style>
+    footer {
+        background-image: url('https://raw.githubusercontent.com/gary830529/Homepage/main/Figures/background.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        padding: 10px;
+        text-align: center;
+    }
+</style>
 
 </html>
