--- a/Biography/index.html
+++ b/Biography/index.html
@@ -96,7 +96,7 @@
 
                     <h2>Honors and Awards</h2>               
                     <ul>
-                        <li>National Onsite Wastewater Recycling Association inaugural Emerging Professionals Scholarship (2023)</li>
+                        <li>National Onsite Wastewater Recycling Association Inaugural Emerging Professionals Scholarship (2023)</li>
                         <li>International Water Association 1<sup>st</sup> Non-Sewered Sanitation Conference Chairperson Recognition Award for Best Poster awarded to Young Water Professional (2023)</li>
                         <li>Richard Ian Stessel Fellowship for Graduate Environmental Engineering Students (2021/2022)</li>
                         <li>Richard Ian Stessel Fellowship for Graduate Environmental Engineering Students (2019/2020)</li>
