--- a/Research/index.html
+++ b/Research/index.html
@@ -66,9 +66,12 @@
             </div>
 
 <style>
-.research-container {
-    width: 800px; /* adjust as needed */
-    margin: 0 auto;
+.research-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 20px 0;
 }
 
 .research-section {
@@ -115,9 +118,7 @@ footer {
                         <h2>Onsite Wastewater Treatment & Sanitation</h2>
                         <div class="content-container">
                             <img src="https://raw.githubusercontent.com/gary830529/Homepage/main/Figures/NG_ToC.jpg" alt="NG">
-                            <div>
-                                <p>The NEWgenerator™, an advanced non-sewered sanitation system, was deployed in an informal community in Durban, South Africa, in 2018. It includes an anaerobic membrane bioreactor (AnMBR), a nutrient capture system, and an electrochlorinator, collectively treating high-strength wastewater with high efficacy. Demonstrating significant contaminant removal, resilience to environmental and usage fluctuations, and a reduced need for sludge management, the system offers a scalable solution for safely managed sanitation and provides a means for non-potable water reuse to address the global water and sanitation crisis.</p>
-                            </div>
+                            <p>The NEWgenerator™, an advanced non-sewered sanitation system, was deployed in an informal community in Durban, South Africa, in 2018. It includes an anaerobic membrane bioreactor (AnMBR), a nutrient capture system, and an electrochlorinator, collectively treating high-strength wastewater with high efficacy. Demonstrating significant contaminant removal, resilience to environmental and usage fluctuations, and a reduced need for sludge management, the system offers a scalable solution for safely managed sanitation and provides a means for non-potable water reuse to address the global water and sanitation crisis.</p>
                         </div>
                     </div>
                 
@@ -125,9 +126,7 @@ footer {
                         <h2>Sustainable Nutrients Management</h2>
                         <div class="content-container">
                             <img src="https://raw.githubusercontent.com/gary830529/Homepage/main/Figures/Z_Pic.jpg" alt="Zeolite">
-                            <div>
-                                <p>The research examines nitrogen (predominantly ammonium) and phosphorus recovery from blackwater via natural and modified clinoptilolite zeolite in a NEWgenerator™ system. It highlights significant nutrient removal and zeolite regeneration efficiencies under fluctuating loads, emphasizing its dual utility in wastewater treatment—as a regenerable adsorbent and as a nutrient-rich fertilizer in a non-sewered sanitation system in the field.</p>
-                            </div>
+                            <p>The research examines nitrogen (predominantly ammonium) and phosphorus recovery from blackwater via natural and modified clinoptilolite zeolite in a NEWgenerator™ system. It highlights significant nutrient removal and zeolite regeneration efficiencies under fluctuating loads, emphasizing its dual utility in wastewater treatment—as a regenerable adsorbent and as a nutrient-rich fertilizer in a non-sewered sanitation system in the field.</p>
                         </div>
                     </div>
 
@@ -135,9 +134,7 @@ footer {
                         <h2>System Dynamics Modeling</h2>
                         <div class="content-container">
                             <img src="https://raw.githubusercontent.com/gary830529/Homepage/main/Figures/STELLA_Pic.jpg" alt="Modeling">
-                            <div>
-                                <p>Employing <a href="https://www.iseesystems.com/store/products/stella-architect.aspx" style="color: #00acee"> Stella<sup>®</sup> Architect</a> for system dynamics, this study develops an intricate model for the NEWgenerator™, optimizing the treatment of water, energy, and nutrients. The approach facilitates scenario-based evaluations, vital for refining the performance and maintenance of this pioneering non-sewer sanitation system across various settings.</p>
-                            </div>
+                            <p>Employing <a href="https://www.iseesystems.com/store/products/stella-architect.aspx" style="color: #00acee"> Stella<sup>®</sup> Architect</a> for system dynamics, this study develops an intricate model for the NEWgenerator™, optimizing the treatment of water, energy, and nutrients. The approach facilitates scenario-based evaluations, vital for refining the performance and maintenance of this pioneering non-sewer sanitation system across various settings.</p>
                         </div>
                     </div>
 
