--- a/index.html
+++ b/index.html
@@ -70,25 +70,27 @@
                     <div class="aboutme-section">
                     <h2>About me</h2>               
                     <p>
-                        Welcome to my webpage. My name is Hsiang-Yang (Gary) Shyu, and I have the privilege of working as a Ph.D. candidate under the mentorship of Dr. Daniel Yeh in his <b><a href="https://www.membiolab.com/" style="color: #1e6400"> Membrane Biotechnology Lab</a></b> in the Department of Civil and Environmental Engineering at the University of South Florida.
+                        Welcome to my webpage. I'm Hsiang-Yang (Gary) Shyu, a Ph.D. candidate under the guidance of Dr. Daniel Yeh in the <b><a href="https://www.membiolab.com/" style="color: #1e6400"> Membrane Biotechnology Lab</a></b> at the University of South Florida's Department of Civil and Environmental Engineering.
                     </p>
 
                     <p>
-                        Our research team is at the cutting edge of engineering wastewater treatment technologies specifically designed for non-sewered sanitation. The <b><a href="https://www.youtube.com/watch?v=v5pW_Mqt6dU" style="color: #1e6400"> NEWgenerator™</a></b> project stands as our most notable contribution, a revolutionary off-grid treatment system that not only treats wastewater but also repurposes it, transforming waste into valuable resources like nutrients, energy, and water.
+                        Our research is at the forefront of developing advanced wastewater treatment technologies for non-sewered sanitation. I play a key role in the <b><a href="https://www.youtube.com/watch?v=v5pW_Mqt6dU" style="color: #1e6400"> NEWgenerator™</a></b> 
+                        project, an innovative onsite wastewater treatment system that not only treats but repurposes wastewater into valuable resources like nutrients, energy, and water.
                     </p>
 
                     <p>
-                        In my crucial role in this transformative project, I am responsible for advancing membrane-based separation technologies and innovating advanced adsorbents for nutrient recycling. My work includes the meticulous analysis of data collected from a field test system in South Africa, with the goal of developing dynamic models to optimize water, nutrient, and energy cycles within the system. Further enriching this work, I have embraced the field of machine learning (ML), applying it to enhance our wastewater treatment capabilities. I have contributed to the development of a real-time remote monitoring system for our system, utilizing ML algorithms to create soft sensors that predict key water quality parameters. This innovation provides invaluable real-time insights, significantly boosting the operational efficiency of the treatment system.
+                        My contributions include enhancing membrane-based separation technologies, creating advanced adsorbents for nutrient recycling, and analyzing data from our South Africa field test to develop models optimizing water, nutrient, and energy cycles. Additionally, I've integrated machine learning to improve treatment efficiency, developing soft sensors for real-time water quality monitoring.
                     </p>
 
                     <p>
-                        Before delving into my Ph.D. studies, I completed my Master’s degree in Environmental Engineering right here at the University of South Florida. During that period, my research centered on applying a flotation microalgae bioreactor within aquaponic systems and wastewater treatment plants.
+                        Before my Ph.D., I earned a Master’s in Environmental Engineering from USF, focusing on flotation microalgae bioreactors for aquaponics and wastewater treatment.
 
                     </p>
                     
                     <p>
-                        For an in-depth view of my academic and professional journey, I invite you to peruse my latest  <a href="https://gary830529.github.io/Resume" style="color: #00acee">CV</a> (Update on September 10th, 2023).
+                        Explore my <a href="https://gary830529.github.io/Resume" style="color: #00acee">CV</a> for a detailed overview of my academic and professional achievements (Updated Feb 10, 2024).
                     </p>
+
                     </div>
                 </div>
             </div>
