--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 
                     <p>
                         Our research is at the forefront of developing advanced wastewater treatment technologies for non-sewered sanitation. I play a key role in the <b><a href="https://www.youtube.com/watch?v=v5pW_Mqt6dU" style="color: #1e6400"> NEWgenerator™</a></b> 
-                        project, an innovative onsite wastewater treatment system that not only treats but repurposes wastewater into valuable resources like nutrients, energy, and water.
+                        project, an innovative onsite wastewater treatment system that not only treats but repurposes wastewater into valuable resources like water, nutrients, and energy.
                     </p>
 
                     <p>
-                        My contributions include enhancing membrane-based separation technologies, creating advanced adsorbents for nutrient recycling, and analyzing data from our South Africa field test to develop models optimizing water, nutrient, and energy cycles. Additionally, I've integrated machine learning to improve treatment efficiency, developing soft sensors for real-time water quality monitoring.
+                        My research includes enhancing membrane-based separation technologies, creating advanced adsorbents for nutrient recycling, and analyzing data from our South Africa field test to develop models optimizing water, nutrient, and energy cycles. Additionally, I've integrated machine learning to improve treatment efficiency, developing soft sensors for real-time water quality monitoring.
                     </p>
 
                     <p>
