--- a/Publications/index.html
+++ b/Publications/index.html
@@ -115,6 +115,18 @@
 
                     <h2>Conference Proceedings</h2>               
                     <ul>
+                        <li><b>Shyu, H.-Y.</b>,Castro, C. J., Bair, R. A., Lu, Q.,& Yeh, D. H.
+                            "Using Machine Learning Algorithms to Predict Difficult to Measure Water Quality Parameters in an Onsite Non-Potable Water Reuse System." 
+                            2024 Florida WateReuse Annual Summit, May 22, 2024, Tampa, FL, USA.
+                            (Conference presentation; <a href="https://www.dropbox.com/scl/fi/c8ekt12yj5rd44r3xm0na/WateReuse-Florida-Summit-2024_Shyu.pptx?rlkey=frfjse7m84bp7dm59n5swcm4c&dl=0" class="fab fa-dropbox" style="color: #3d9ae8" target="_blank"></a>)
+                            </li>
+
+                        <li><b>Shyu, H.-Y.</b>,Castro, C. J., Bair, R. A., Lu, Q.,& Yeh, D. H.
+                            "Machine Learning Sensor Monitoring of an Onsite Water Recycling System." 
+                            2024 WateReuse Symposium, Mar 11-14, 2024, Denver, CO, USA.
+                            (Conference poster; <a href="https://www.dropbox.com/scl/fi/jredmpwhrhebcg8y94mcr/WateReuse_Poster_ML-Final.pdf?rlkey=85ch2fx3f86rgb070d206lsla&dl=0" class="fab fa-dropbox" style="color: #3d9ae8" target="_blank"></a>)
+                            </li>
+                        
                         <li><b>Shyu, H.-Y.</b>,Bair, R. A., Castro, C. J., Ncube. T., Ndwandwe, B., Mutsakatira, E., Cottingham, R.,& Yeh, D. H. 
                             "Water demand analysis of communal  ablution blocks (CABs) at an informal settlement in South Africa." 
                             1<sup>st</sup> International Water Association Non‑Sewered Sanitation Conference, Oct 15-18 2023, Johannesburg, South Africa.
