--- a/Publications/index.html
+++ b/Publications/index.html
@@ -103,8 +103,14 @@
                         </li>
                     </ol>
 
-                    <h2>Theses</h2>               
+                    <h2>Dissertations & Theses</h2>               
                     <ul>
+                        <li>Shyu, H.-Y. (2024). 
+                            The NEWgenerator™ Decentralized Wastewater Treatment System for Non-sewered Sanitation: Technology Advancement Through Field Evaluation and Modeling. 
+                            <i>University of South Florida</i>. 
+                            <a href="https://www.proquest.com/dissertations-theses/em-newgenerator-sup-tm-decentralized-wastewater/docview/3083312852/se-2?accountid=14745" class="ai ai-doi" style="color: #debe97" target="_blank"></a>                            
+                        </li>
+
                         <li>Shyu, H.-Y. (2018). 
                             Application of a Floating Membrane Algal Photobioreactor for Freshwater Aquaculture. 
                             <i>University of South Florida</i>. 
