--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="aboutme-section">
                     <h2>About me</h2>               
                     <p>
-                        Welcome to my webpage. I'm Hsiang-Yang (Gary) Shyu, a Ph.D. candidate under the guidance of Dr. Daniel Yeh in the <b><a href="https://www.membiolab.com/" style="color: #1e6400"> Membrane Biotechnology Lab</a></b> at the University of South Florida's Department of Civil and Environmental Engineering.
+                        My name is Hsiang-Yang (Gary) Shyu and I am currently a postdoctoral research scholar working with Dr. Daniel Yeh in his <b><a href="https://www.membiolab.com/" style="color: #1e6400"> Membrane Biotechnology Lab</a></b> at the University of South Florida's Department of Civil and Environmental Engineering.
                     </p>
 
                     <p>
@@ -83,8 +83,11 @@
                     </p>
 
                     <p>
-                        Before my Ph.D., I earned a Master’s in Environmental Engineering from USF, focusing on flotation microalgae bioreactors for aquaponics and wastewater treatment.
+                        I obtained my Ph.D. in Civil and Environmental Engineering at the University of South Florida in July 2024, supervised by Dr. Daniel Yeh. I am proud to be the 14<sup>th</sup> Ph.D. from his Lab! 
+                    </p>
 
+                    <p>
+                        Prior to my Ph.D., I earned a Master’s in Environmental Engineering from USF, focusing on flotation microalgae bioreactors for aquaponics and wastewater treatment.
                     </p>
                     
                     <p>
