--- a/Biography/index.html
+++ b/Biography/index.html
@@ -77,6 +77,14 @@
 
                     <h2>Teaching</h2>               
                     <ul>
+                        <li>Teaching Assistant for “<b>ENV4004: Environmental Engineering Lab</b>” (Fall 2023, Spring 2024), University of South Florida
+                            <ul>
+                                <li>Prepare weekly lab experiments.</li>
+                                <li>Guide weekly lab experiments and equipment usage.</li>
+                                <li>Assist with experiment problems and solutions.</li>
+                            </ul>
+                        </li>
+                        
                         <li>Teaching Assistant for “<b>ENV4001: Evironmental Systems Engineering</b>” (Fall 2023), University of South Florida
                             <ul>
                                 <li>Lecture weekly TA section.</li>
@@ -85,13 +93,7 @@
                                 <li>Grading homework and exams.</li>
                             </ul>
                         </li>
-                        <li>Teaching Assistant for “<b>ENV4004: Environmental Engineering Lab</b>” (Fall 2023), University of South Florida
-                            <ul>
-                                <li>Prepare weekly lab experiments.</li>
-                                <li>Guide weekly lab experiments and equipment usage.</li>
-                                <li>Assist with experiment problems and solutions.</li>
-                            </ul>
-                        </li>
+                        
                     </ul>
 
                     <h2>Honors and Awards</h2>               
