--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <img src="https://raw.githubusercontent.com/gary830529/Homepage/main/Figures/headshot2.jpg" alt="Shyu" class="profile-pic">
                 <h2>Hsiang-Yang (Gary) Shyu</h2>
                                 
-                <p><b> Ph.D. Candidate @ USF CEE </b></p>
+                <p><b> Postdoctoral Researcher @ USF CEE </b></p>
 
                 <address>
                     <ul class="contact-info">
