--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <main>
             <div class="left-side">
                 <img src="https://raw.githubusercontent.com/gary830529/Homepage/main/Figures/headshot2.jpg" alt="Shyu" class="profile-pic">
-                <h2>Hsiang-Yang (Gary) Shyu</h2>
+                <h2>Hsiang-Yang (Gary) Shyu, Ph.D.</h2>
                                 
                 <p><b> Postdoctoral Researcher @ USF CEE </b></p>
 
